...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signOn.SignOnFragment">

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="@dimen/input_height"
        android:text=""
        android:visibility="gone"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_height"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/errorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:defaultFocusHighlightEnabled="true"
            android:focusedByDefault="false"
            android:hint="@string/email_address"
...
            android:singleLine="true"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        android:textColor="@color/red_highlight"
        android:textSize="11sp"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/emailErrorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/userNameErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        android:textColor="@color/red_highlight"
        android:textSize="11sp"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/userNameErrorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/firstNameErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        android:textColor="@color/red_highlight"
        android:textSize="11sp"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/firstNameErrorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/lastNameErrorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:hint="@string/Password"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        android:textColor="@color/red_highlight"
        android:textSize="11sp"
...
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/input_margin"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/passwordErrorView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="0dp"
            android:focusedByDefault="false"
            android:hint="@string/confirm_password"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/confirmPasswordErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        android:textColor="@color/red_highlight"
        android:textSize="11sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationLayout" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="175dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/sign_on_buttons_toTop"
        android:layout_marginBottom="@dimen/sign_on_buttons_toBottom"
        android:clickable="true"
...
