...
        android:backgroundTint="@color/coolGrey"
        android:text="@string/log_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonSignOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/coolGrey"
        android:text="@string/sing_on_button"
...
